--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==3.7.1
 bcrypt==4.1.2
@@ -19,6 +20,7 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
 load-dotenv==0.1.0
+Mako==1.3.0
 MarkupSafe==2.1.3
 orjson==3.9.10
 passlib==1.7.4
